--- a/ReasonMin/baseline_v2/requirements.txt
+++ b/ReasonMin/baseline_v2/requirements.txt
@@ -6,5 +6,9 @@ Pillow==9.4.0
 python-dotenv==1.0.0
 scikit-learn==1.2.2
 tensorboard==2.13.0
-torch==2.1.1
-torchvision==0.16.1
+#torch==2.1.1
+#torchvision==0.16.1
+
+#conda install pytorch==1.12.1 torchvision==0.13.1 torchaudio==0.12.1 cudatoolkit=11.3 -c pytorch
+
+#pip install -r requirements.txt
